--- a/TWebProject/Views/Shared/_Layout.cshtml
+++ b/TWebProject/Views/Shared/_Layout.cshtml
@@ -14,7 +14,11 @@
 
     </div>
 
-  
+    <!-- Header -->
+    <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
+        @Html.Partial("")
+    
+    </header>
 
 
 </body>
