--- a/TWebProject/Views/Shared/_Layout.cshtml
+++ b/TWebProject/Views/Shared/_Layout.cshtml
@@ -1,24 +1,37 @@
-<!DOCTYPE html>
-<html>
+@{
+    ViewBag.Title = "Home Page";
+}
+
+<!doctype html>
+<html lang="">
+
 <head>
-    <title>W3.CSS Template</title>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <title>Adoptex</title>
+    <link rel="stylesheet" href="~/Style/styleIndex.css">
 </head>
-<body>
 
-    <!-- Navbar (sit on top) -->
-    <div class="w3-top">
-        @Html.Partial("_Navbar")
+<body style="background-color: #DEFCFF">
 
+    <div class="header">
+        @Html.Partial("header")
     </div>
 
-    <!-- Header -->
-    <header class="w3-display-container w3-content w3-wide" style="max-width:1500px;" id="home">
-        @Html.Partial("")
-    
-    </header>
+    <div class="adsContainer">
+        @Html.Partial("_Adscontainer1")
+    </div>
+
+    @RenderBody()
+
+    <div class="grid-container">
+        @Html.Partial("_Grid")
+    </div>
+
+    <div class="adsContainer">
+        @Html.Partial("_Adscontainer2")
+    </div>
+
 
 
 </body>
