--- a/TWebProject/Views/Shared/_Layout.cshtml
+++ b/TWebProject/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="~/Style/styleIndex.css">
 </head>
 
-<body style="background-color: #DEFCFF">
+<body style="background-color: white">
 
     <div class="header">
         @Html.Partial("header")
