--- a/TWebProject/Views/Shared/_Grid.cshtml
+++ b/TWebProject/Views/Shared/_Grid.cshtml
@@ -7,7 +7,7 @@
     <img src="~/img/pisi2.png" alt="Animal">
     <div class="description">
         <p>
-            Salut! Mă numesc Misty și sunt o mică exploratoare în căutare de aventuri în noua mea casă.
+            Salut! Mă numesc Mistyy și sunt o mică exploratoare în căutare de aventuri în noua mea casă.
             Sunt plină de energie și curiozitate, și mi-ar plăcea să am un prieten ca tine
             cu care să mă joc și să împart momente speciale.
         </p>
