added _UserData to Layout

--- a/TWebProject/Views/Shared/_Layout.cshtml
+++ b/TWebProject/Views/Shared/_Layout.cshtml
@@ -24,7 +24,10 @@
         @Html.Partial("_Grid")
     </div>
 
-   
+
+    <div class="_UserData">
+        @Html.Partial("_UserData")
+    </div>
 
 </body>
 </html>
