--- a/TWebProject/Views/Shared/_Layout.cshtml
+++ b/TWebProject/Views/Shared/_Layout.cshtml
@@ -24,8 +24,7 @@
         @Html.Partial("_Grid")
     </div>
 
-
-    <div class="_UserData">
+    <div>
         @Html.Partial("_UserData")
     </div>
 
