unele modificari la login

--- a/TWebProject/Views/Login/index.cshtml
+++ b/TWebProject/Views/Login/index.cshtml
@@ -1,11 +1,93 @@
-﻿using System;
-using System.Collections.Generic;
-using System.Linq;
-using System.Web;
+﻿﻿@model eUseControl.Web.Models.User.UserLogin
 
-namespace TWebProject.Views.Login
-{
-	public class index
-	{
-	}
+@{
+    Layout = null;
+    ViewBag.Title = "Login";
 }
+
+<link rel='stylesheet' href='/Content/lStyle.css'>
+<link rel='stylesheet' href='/Content/style.css'>
+@System.Web.Optimization.Styles.Render("~/Content/css")
+
+
+<div class='header-line'>
+    <div class='header-logo'>
+        <img src="~/Images/logo.png" alt="">
+
+    </div>
+
+    <div class="nav">
+        <a class='nav-item' href="/Home">ACASĂ</a>
+        <a class='nav-item' href="/Menu">MENIU</a>
+        <a class='nav-item' href="#">DESPRE NOI</a>
+        <a class='nav-item' href="#">BRONARE</a>
+    </div>
+    <div class='phone'>
+        <div class='phone-holder'>
+
+            <div class='phone-img'>
+                <img src="~/Images/phone.png" alt="">
+            </div>
+
+            <div class='number'><a class='num' href='#'>+0798-94-700</a></div>
+        </div>
+
+        <div class='phone-text'>
+            Sunați pentru <br> bronare
+        </div>
+
+    </div>
+</div>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div class="login-form">
+                @using (Html.BeginForm("Index", "Login", FormMethod.Post, new { @id = "LoginForm" }))
+                {
+                    @Html.AntiForgeryToken()
+
+                    <div class="form-horizontal">
+                        @Html.ValidationSummary(true)
+
+                        <div class="form-group">
+
+                            <div class="col-md-11">
+                                @Html.LabelFor(model => model.Credential, new { @class = "control-label" })
+                                @Html.TextBoxFor(model => model.Credential, new
+                           {
+                               @class = "form-control",
+                               id = "username",
+                               name = "username",
+                               value = "",
+                               title = "Please enter your username",
+                           })
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+
+                            <div class="col-md-11">
+                                @Html.LabelFor(model => model.Password, new { @class = "control-label" })
+                                @Html.TextBoxFor(model => model.Password, new
+                           {
+                               @class = "form-control",
+                               id = "password",
+                               name = "password",
+                               value = "",
+                               placeholder = "**********",
+                               title = "Please enter your password",
+                               type = "password"
+                           })
+                            </div>
+                            <div>
+                                <button class="btn btn-succes">Login</button>
+                                <a class="btn btn-default" href="register.html">Register</a>
+                            </div>
+                        </div>
+                    </div>
+                }
+            </div>
+        </div>
+    </div>
+</div>
