--- a/TWebProject/Views/Shared/_LayoutAnimal.cshtml
+++ b/TWebProject/Views/Shared/_LayoutAnimal.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Animal";
 }
 
 <!doctype html>
@@ -19,14 +19,6 @@
     </div>
 
     @RenderBody()
-
-    <div class="grid-container">
-        @Html.Partial("_Grid")
-    </div>
-
-    <div class="grid-container">
-        @Html.Partial("ListAnimal")
-    </div>
 
 </body>
 </html>
