am modificat functionarea butoanelor

--- a/TWebProject/Style/styleIndex.css
+++ b/TWebProject/Style/styleIndex.css
@@ -73,13 +73,14 @@ ul li a {
 }
 
 .grid-item {
-  border: 1px solid #cccccc;
-  padding: 20px;
-  margin-bottom: 20px; /* spațiu între containere */
-  border-radius: 10px;
-  background-color: #dfefde;
-  box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* umbra ușoară pentru efect de elevație */
-  transition: box-shadow 0.3s ease-in-out;
+    border: 1px solid #cccccc;
+    padding: 20px;
+    margin-bottom: 20px; /* spațiu între containere */
+    border-radius: 10px;
+    background-color: #dfefde;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* umbra ușoară pentru efect de elevație */
+    transition: box-shadow 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .grid-item:hover {
@@ -105,4 +106,3 @@ ul li a {
   text-align: center; /* centrat stelele de rating */
   margin-top: 10px; /* spațiu deasupra rating-ului */
 }
-
