--- a/TWebProject/Views/Shared/header.cshtml
+++ b/TWebProject/Views/Shared/header.cshtml
@@ -3,8 +3,15 @@
     ViewBag.Title = "header";
 }
 
-<img src="~/img/upImg.png" alt="UpImg" class="center">
+<img src="~/img/upImg.png" alt="UpImg" class="center" onclick="navigateToHome();">
 <hr class="custom-hr">
+
+<script>
+    function navigateToHome() {
+        window.location.href = '@Url.Action("Index", "Home")'; // Presupunând că Index este acțiunea pentru pagina de start
+    }
+</script>
+
 
 <ul>
     <li><a class="active" href="index.html">Home</a></li>
