--- a/TWebProject/Views/Shared/header.cshtml
+++ b/TWebProject/Views/Shared/header.cshtml
@@ -8,7 +8,7 @@
 
 <script>
     function navigateToHome() {
-        window.location.href = '@Url.Action("Index", "Home")'; // Presupunând că Index este acțiunea pentru pagina de start
+        window.location.href = '@Url.Action("Index", "Home")';
     }
 </script>
 
