--- a/TWebProject/Views/Login/Index.cshtml
+++ b/TWebProject/Views/Login/Index.cshtml
@@ -22,10 +22,6 @@
             box-sizing: border-box;
         }
 
-        body {
-            background-color: #080710;
-        }
-
         .background {
             width: 430px;
             height: 520px;
@@ -147,7 +143,7 @@
             }
     </style>
 </head>
-<body>
+<body style="background-color: #080710">
     <div class="background">
         <div class="shape"></div>
         <div class="shape"></div>
