am creat register

--- a/TWebProject/Views/Shared/header.cshtml
+++ b/TWebProject/Views/Shared/header.cshtml
@@ -20,6 +20,7 @@
     <li><a href="adopt.html">Preferate</a></li>
     <li style="float:right"><a href="#about">About</a></li>
     <li style="float:right"><a href="/Login/Index">Login</a></li>
+    <li style="float:right"><a href="/Register/Index">Register</a></li>
 
 </ul>
 
