--- a/TWebProject/Views/Register/Register.cshtml
+++ b/TWebProject/Views/Register/Register.cshtml
@@ -1,4 +1,6 @@
 ﻿@{
-    ViewBag.Title = "Register Page";
+    ViewBag.Title = "Register";
     Layout = "~/Views/Shared/_LayoutRegister.cshtml";
 }
+
+<h2>Register</h2>
