--- a/TWebProject/Views/Shared/_Layout.cshtml
+++ b/TWebProject/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="~/Style/styleIndex.css">
 </head>
 
-<body style="background-color: white">
+<body style="background-color: azure ">
     @if (ViewBag.IsLogin != true)
     {
         <div class="header">
