--- a/TWebProject/Views/Shared/_LayoutLogin.cshtml
+++ b/TWebProject/Views/Shared/_LayoutLogin.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "Register";
+    ViewBag.Title = "Login";
 }
 
 <!DOCTYPE html>
@@ -153,7 +153,7 @@
         <div class="shape"></div>
     </div>
     <form>
-        <h3>Register Here</h3>
+        <h3>Login Here</h3>
 
         <label for="username">Username</label>
         <input type="text" placeholder="Email or Phone" id="username">
@@ -161,7 +161,7 @@
         <label for="password">Password</label>
         <input type="password" placeholder="Password" id="password">
 
-        <button>Register</button>
+        <button>Login</button>
         <div class="social">
             <div class="go"><i class="fab fa-google"></i>  Google</div>
             <div class="fb"><i class="fab fa-facebook"></i>  Facebook</div>
