--- a/TWebProject/Views/Shared/header.cshtml
+++ b/TWebProject/Views/Shared/header.cshtml
@@ -11,7 +11,7 @@
 
 
 <ul>
-    <li><a class="active" href="index.html">Home</a></li>
+    <li><a class="active" href="/Home/Index">Home</a></li>
     <li><a href="adopt.html">Adopt</a></li>
     <li><a href="donate.html">Donate</a></li>
     <li><a href="adopt.html">Preferate</a></li>
