--- a/TWebProject/Views/Shared/header.cshtml
+++ b/TWebProject/Views/Shared/header.cshtml
@@ -12,7 +12,7 @@
 
 <ul>
     <li><a class="active" href="/Home/Index">Home</a></li>
-    <li><a href="adopt.html">Adopt</a></li>
+    <li><a href="/Home/Adopt">Adopt</a></li>
     <li><a href="donate.html">Donate</a></li>
     <li><a href="adopt.html">Preferate</a></li>
     <li style="float:right"><a href="#about">About</a></li>
